--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </div>
 <div class="col" style="grid-column:span 3">
 <label>電話</label>
-<input id="phone" placeholder="0912-345-678（可含 - ）" type="text"/>
+<input id="phone" placeholder="手機（可留空）0912-345-678；或改填 LINE" type="text"/>
 </div>
 </div>
 <div class="row">
