--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
 <div class="col" style="grid-column:span 6">
 <label>冷氣位於樓層（可複選）</label>
 <div class="checkbox-group" id="acFloors"></div>
+<div id="acFloorAboveWrap" class="hidden"><input id="acFloorAbove" type="text" placeholder="請輸入實際樓層（例：6F、7F…）" /></div>
 </div>
 <div class="col" style="grid-column:span 6">
 <label>洗衣機位於樓層（可複選）</label>
 <div class="checkbox-group" id="washerFloors"></div>
+<div id="washerFloorAboveWrap" class="hidden"><input id="washerFloorAbove" type="text" placeholder="請輸入實際樓層（例：6F、7F…）" /></div>
 </div>
 </div>
 <div class="row">
