--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
       <input id="reminderMonths" type="number" min="0" step="1" placeholder="例如 12" class="tiny compact" value="24">
       <label class="muted">下次提醒</label>
       <input id="nextReminder" type="text" disabled class="tiny">
+      <label class="pill"><input id="reminderNotified" type="checkbox"> <span>已通知</span></label>
+      <label class="pill danger"><input id="reminderMuted" type="checkbox"> <span>不再提醒</span></label>
     </div>
   </div>
 </div>
