--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 <label><input id="quotationOk" type="checkbox"/> 客人確認報價單</label>
 </div>
 <div class="col right-align" style="grid-column:span 4">
-<button class="inline-btn" id="recalc" type="button">重新計算金額</button>
+<button class="inline-btn" id="recalcOrder" type="button">重新計算金額</button>
 </div>
 </div>
 <div class="row">
