--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
 </div>
 <div class="col" style="grid-column:span 3">
 <label>電話</label>
-<input id="phone" placeholder="手機（可留空）0912-345-678；或改填 LINE" type="text"/>
+<div id="phoneContainer">
+  <input class="phone-input" type="text" placeholder="輸入電話" />
+</div>
+<button type="button" id="addPhoneBtn">＋新增電話</button>
 </div>
 </div>
 <div class="row">
